[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Themes/theme_dark.tres" type="Theme" id=1]
[ext_resource path="res://UI/Dialogs/SettingsDialog.gd" type="Script" id=2]
[ext_resource path="res://UI/Components/DelayedSpinBox.gd" type="Script" id=3]
[ext_resource path="res://UI/Dialogs/KeyBindingsList.gd" type="Script" id=4]
[ext_resource path="res://UI/Dialogs/AddKeyDialog.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="SettingsDialog" type="WindowDialog"]
margin_right = 520.0
margin_bottom = 250.0
rect_min_size = Vector2( 520, 270 )
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "SETTINGS_TITLE"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 508.0
margin_bottom = 258.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="General" type="Control" parent="MarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/General"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/General/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 12

[node name="PressureSensitivity" type="HBoxContainer" parent="MarginContainer/TabContainer/General/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/General/VBoxContainer/PressureSensitivity"]
margin_top = 2.0
margin_right = 246.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SETTINGS_PRESSURE_SENSITIVITY"

[node name="PressureSensitivity" type="SpinBox" parent="MarginContainer/TabContainer/General/VBoxContainer/PressureSensitivity"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.1
max_value = 2.0
step = 0.01
value = 1.0

[node name="DefaultBrushSize" type="HBoxContainer" parent="MarginContainer/TabContainer/General/VBoxContainer"]
margin_top = 41.0
margin_right = 496.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/General/VBoxContainer/DefaultBrushSize"]
margin_top = 2.0
margin_right = 246.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SETTINGS_BRUSH_SIZE"

[node name="DefaultBrushSize" type="SpinBox" parent="MarginContainer/TabContainer/General/VBoxContainer/DefaultBrushSize"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
value = 12.0
allow_greater = true

[node name="DefaultCanvasColor" type="HBoxContainer" parent="MarginContainer/TabContainer/General/VBoxContainer"]
margin_top = 66.0
margin_right = 496.0
margin_bottom = 83.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/General/VBoxContainer/DefaultCanvasColor"]
margin_right = 246.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SETTINGS_CANVAS_COLOR"

[node name="DefaultCanvasColor" type="ColorPickerButton" parent="MarginContainer/TabContainer/General/VBoxContainer/DefaultCanvasColor"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
flat = true
color = Color( 0.12549, 0.129412, 0.141176, 1 )
edit_alpha = false

[node name="DefaultSaveDir" type="HBoxContainer" parent="MarginContainer/TabContainer/General/VBoxContainer"]
margin_top = 87.0
margin_right = 496.0
margin_bottom = 108.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/General/VBoxContainer/DefaultSaveDir"]
margin_top = 2.0
margin_right = 246.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SETTINGS_PROJECT_FOLDER"

[node name="DefaultSaveDir" type="LineEdit" parent="MarginContainer/TabContainer/General/VBoxContainer/DefaultSaveDir"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "e.g. C:/Users/me/Lorien"
placeholder_alpha = 0.5

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/TabContainer/General/VBoxContainer"]
margin_top = 112.0
margin_right = 496.0
margin_bottom = 136.0
custom_constants/separation = 24

[node name="Language" type="HBoxContainer" parent="MarginContainer/TabContainer/General/VBoxContainer"]
margin_top = 140.0
margin_right = 496.0
margin_bottom = 165.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/General/VBoxContainer/Language"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SETTINGS_LANGUAGE"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/General/VBoxContainer/Language"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "English"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/TabContainer/General/VBoxContainer"]
margin_top = 169.0
margin_right = 496.0
margin_bottom = 181.0
custom_styles/separator = SubResource( 3 )
custom_constants/separation = 12

[node name="RestartLabel" type="Label" parent="MarginContainer/TabContainer/General/VBoxContainer"]
visible = false
margin_top = 206.0
margin_right = 496.0
margin_bottom = 223.0
custom_colors/font_color = Color( 1, 0.470588, 0.470588, 1 )
text = "SETTINGS_RESTART_NOTICE"
align = 1

[node name="Appearance" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Appearance"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/Appearance/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 12

[node name="Theme" type="HBoxContainer" parent="MarginContainer/TabContainer/Appearance/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Appearance/VBoxContainer/Theme"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SETTINGS_THEME"

[node name="Theme" type="OptionButton" parent="MarginContainer/TabContainer/Appearance/VBoxContainer/Theme"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dark"
items = [ "Dark", null, false, 0, null, "Light (not implemented yet)", null, false, 1, null ]
selected = 0

[node name="UIScale" type="HBoxContainer" parent="MarginContainer/TabContainer/Appearance/VBoxContainer"]
margin_top = 45.0
margin_right = 496.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Appearance/VBoxContainer/UIScale"]
margin_top = 4.0
margin_right = 218.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SETTINGS_UI_SCALE"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/Appearance/VBoxContainer/UIScale"]
margin_left = 222.0
margin_right = 496.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UIScaleOptions" type="OptionButton" parent="MarginContainer/TabContainer/Appearance/VBoxContainer/UIScale/HBoxContainer"]
margin_right = 198.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SETTINGS_UI_SCALE_AUTO"
items = [ "SETTINGS_UI_SCALE_AUTO", null, false, 0, null, "SETTINGS_UI_SCALE_CUSTOM", null, false, 1, null ]
selected = 0

[node name="UIScale" type="SpinBox" parent="MarginContainer/TabContainer/Appearance/VBoxContainer/UIScale/HBoxContainer"]
margin_left = 202.0
margin_right = 274.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.5
max_value = 2.5
step = 0.1
value = 1.0
script = ExtResource( 3 )

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/TabContainer/Appearance/VBoxContainer"]
margin_top = 74.0
margin_right = 496.0
margin_bottom = 86.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 12

[node name="RestartLabel" type="Label" parent="MarginContainer/TabContainer/Appearance/VBoxContainer"]
visible = false
margin_top = 61.0
margin_right = 496.0
margin_bottom = 78.0
custom_colors/font_color = Color( 1, 0.470588, 0.470588, 1 )
text = "SETTINGS_RESTART_NOTICE"
align = 1

[node name="Rendering" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Rendering"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/Rendering/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 12

[node name="AntiAliasing" type="HBoxContainer" parent="MarginContainer/TabContainer/Rendering/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Rendering/VBoxContainer/AntiAliasing"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SETTINGS_AA_METHOD"

[node name="AntiAliasing" type="OptionButton" parent="MarginContainer/TabContainer/Rendering/VBoxContainer/AntiAliasing"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SETTINGS_AA_METHOD_NONE"
items = [ "SETTINGS_AA_METHOD_NONE", null, false, 0, null, "OpenGL Hint", null, false, 1, null, "Texture Fill", null, false, 2, null ]
selected = 0

[node name="BrushRounding" type="HBoxContainer" parent="MarginContainer/TabContainer/Rendering/VBoxContainer"]
margin_top = 45.0
margin_right = 496.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Rendering/VBoxContainer/BrushRounding"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SETTINGS_BRUSH_CAPS"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/Rendering/VBoxContainer/BrushRounding"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "SETTINGS_BRUSH_CAPS_FLAT"
items = [ "SETTINGS_BRUSH_CAPS_FLAT", null, false, 0, null, "SETTINGS_BRUSH_CAPS_ROUND", null, false, 1, null ]
selected = 0

[node name="TargetFramerate" type="HBoxContainer" parent="MarginContainer/TabContainer/Rendering/VBoxContainer"]
margin_top = 74.0
margin_right = 496.0
margin_bottom = 95.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Rendering/VBoxContainer/TargetFramerate"]
margin_top = 2.0
margin_right = 246.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SETTINGS_FPS_FOREGROUND"

[node name="TargetFramerate" type="SpinBox" parent="MarginContainer/TabContainer/Rendering/VBoxContainer/TargetFramerate"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 1000.0
value = 144.0
allow_greater = true

[node name="BackgroundFramerate" type="HBoxContainer" parent="MarginContainer/TabContainer/Rendering/VBoxContainer"]
margin_top = 99.0
margin_right = 496.0
margin_bottom = 120.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Rendering/VBoxContainer/BackgroundFramerate"]
margin_top = 2.0
margin_right = 246.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SETTINGS_FPS_BACKGROUND"

[node name="BackgroundFramerate" type="SpinBox" parent="MarginContainer/TabContainer/Rendering/VBoxContainer/BackgroundFramerate"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 5.0
max_value = 1000.0
value = 10.0
allow_greater = true

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/TabContainer/Rendering/VBoxContainer"]
margin_top = 124.0
margin_right = 496.0
margin_bottom = 136.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 12

[node name="RestartLabel" type="Label" parent="MarginContainer/TabContainer/Rendering/VBoxContainer"]
visible = false
margin_top = 140.0
margin_right = 496.0
margin_bottom = 157.0
custom_colors/font_color = Color( 1, 0.470588, 0.470588, 1 )
text = "SETTINGS_RESTART_NOTICE"
align = 1

[node name="Keybindings" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0
script = ExtResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/TabContainer/Keybindings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 12.0

[node name="KeyBindingsList" type="GridContainer" parent="MarginContainer/TabContainer/Keybindings/ScrollContainer"]
columns = 3

[node name="AddKeyDialog" parent="MarginContainer/TabContainer/Keybindings" instance=ExtResource( 5 )]
window_title = "KEYBINDING_DIALOG_BIND_WINDOW_NAME"

[node name="ConfirmRebind" type="ConfirmationDialog" parent="MarginContainer/TabContainer/Keybindings/AddKeyDialog"]
margin_right = 200.0
margin_bottom = 70.0
popup_exclusive = true
window_title = "KEYBINDING_DIALOG_REBIND_WINDOW_NAME"
dialog_autowrap = true

[node name="Bioprinting" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Bioprinting"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer"]
margin_right = 496.0
margin_bottom = 4.0

[node name="Units" type="HBoxContainer" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer"]
margin_top = 8.0
margin_right = 496.0
margin_bottom = 33.0

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer/Units"]
margin_top = 4.0
margin_right = 444.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Units"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer/Units"]
margin_left = 448.0
margin_right = 496.0
margin_bottom = 25.0
text = "mm"
items = [ "mm", null, false, 0, null, "inch", null, false, 1, null ]
selected = 0

[node name="PrintBedSize" type="HBoxContainer" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer"]
margin_top = 37.0
margin_right = 496.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer/PrintBedSize"]
margin_top = 2.0
margin_right = 250.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Platform Size"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer/PrintBedSize"]
margin_left = 254.0
margin_right = 496.0
margin_bottom = 21.0

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer/PrintBedSize/HBoxContainer"]
margin_top = 2.0
margin_right = 40.0
margin_bottom = 19.0
text = "Width"

[node name="Width" type="SpinBox" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer/PrintBedSize/HBoxContainer"]
margin_left = 44.0
margin_right = 116.0
margin_bottom = 21.0
min_value = 1.0
max_value = 2000.0
value = 1.0
align = 1

[node name="Label2" type="Label" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer/PrintBedSize/HBoxContainer"]
margin_left = 120.0
margin_top = 2.0
margin_right = 166.0
margin_bottom = 19.0
text = "Height"

[node name="Height" type="SpinBox" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer/PrintBedSize/HBoxContainer"]
margin_left = 170.0
margin_right = 242.0
margin_bottom = 21.0
min_value = 1.0
max_value = 2000.0
value = 1.0
align = 1

[node name="LayerHeight" type="HBoxContainer" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer"]
margin_top = 62.0
margin_right = 496.0
margin_bottom = 83.0

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer/LayerHeight"]
margin_top = 2.0
margin_right = 420.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Layer Height"

[node name="Height" type="SpinBox" parent="MarginContainer/TabContainer/Bioprinting/VBoxContainer/LayerHeight"]
margin_left = 424.0
margin_right = 496.0
margin_bottom = 21.0
min_value = 0.01
step = 0.01
value = 0.25
allow_greater = true
align = 1

[connection signal="value_changed" from="MarginContainer/TabContainer/General/VBoxContainer/PressureSensitivity/PressureSensitivity" to="." method="_on_PressureSensitivity_value_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/General/VBoxContainer/DefaultBrushSize/DefaultBrushSize" to="." method="_on_DefaultBrushSize_value_changed"]
[connection signal="color_changed" from="MarginContainer/TabContainer/General/VBoxContainer/DefaultCanvasColor/DefaultCanvasColor" to="." method="_on_DefaultCanvasColor_color_changed"]
[connection signal="text_changed" from="MarginContainer/TabContainer/General/VBoxContainer/DefaultSaveDir/DefaultSaveDir" to="." method="_on_DefaultSaveDir_text_changed"]
[connection signal="item_selected" from="MarginContainer/TabContainer/General/VBoxContainer/Language/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Appearance/VBoxContainer/Theme/Theme" to="." method="_on_Theme_item_selected"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Appearance/VBoxContainer/UIScale/HBoxContainer/UIScaleOptions" to="." method="_on_UIScaleOptions_item_selected"]
[connection signal="gui_input" from="MarginContainer/TabContainer/Appearance/VBoxContainer/UIScale/HBoxContainer/UIScale" to="MarginContainer/TabContainer/Appearance/VBoxContainer/UIScale/HBoxContainer/UIScale" method="_on_UIScale_gui_input"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Appearance/VBoxContainer/UIScale/HBoxContainer/UIScale" to="." method="_on_UIScale_value_changed"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Rendering/VBoxContainer/AntiAliasing/AntiAliasing" to="." method="_on_AntiAliasing_item_selected"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Rendering/VBoxContainer/BrushRounding/OptionButton" to="." method="_on_Brush_rounding_item_selected"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Rendering/VBoxContainer/TargetFramerate/TargetFramerate" to="." method="_on_Target_Fps_Foreground_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Rendering/VBoxContainer/BackgroundFramerate/BackgroundFramerate" to="." method="_on_Target_Fps_Background_changed"]
[connection signal="confirmed" from="MarginContainer/TabContainer/Keybindings/AddKeyDialog/ConfirmRebind" to="MarginContainer/TabContainer/Keybindings/AddKeyDialog" method="_on_ConfirmRebind_confirmed"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Bioprinting/VBoxContainer/Units/OptionButton" to="." method="_on_Unit_item_selected"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Bioprinting/VBoxContainer/PrintBedSize/HBoxContainer/Width" to="." method="_on_PlatformWidth_value_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Bioprinting/VBoxContainer/PrintBedSize/HBoxContainer/Height" to="." method="_on_PlatformHeight_value_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Bioprinting/VBoxContainer/LayerHeight/Height" to="." method="_on_LayerHeight_value_changed"]
